[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
serde_json = "*"
tempfile = "*"
log = "*"
env_logger = "*"